Page layout completed using flexbox approach.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ibrahim's Landing Page</title>
+    <link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div class="Header">
@@ -22,28 +23,32 @@
             <div class="Title"><strong>Welcome to my Page</strong></div>
             <div class="Subtext">I can help with your actuarial projection needs. Please contact me.</div>
             <div class="Click"><button>Contact me</button> </div>
-            <div class="Image"><img alt="A picture of a robot" href="./img/robot.jpg"></div>
         </div>
+
+        <div class="Image"><img alt="A picture of a robot" src="./img/robot.jpg" width="300px"></div>
     </div>
 
     <div class="Content2">
         <div class="Title2">Here are some of the things that i can help you with.</div>
-        <div class="Card">
-            <img alt="Simley face">
-            <div class="Text">Prophet modelling development and maintenance.</div>
+        <div class="Card_container">
+            <div class="Card">
+                <img alt="Picture of stock chart." src="./img/stock.jpg" height="100px">
+                <div class="Text">Prophet modelling development and maintenance.</div>
+            </div>
+            <div class="Card">
+                <img alt="Picture of a calculator." src="./img/calculator.jpg" height="100px">
+                <div class="Text">Liability valuation under various statutory regime.</div>
+            </div>
+            <div class="Card">
+                <img alt="Picture of a book." src="./img/book.jpg" height="100px">
+                <div class="Text">Financial reporting under IFRS 17.</div>
+            </div>
+            <div class="Card">
+                <img alt="Picture of a swimmer." src="./img/swimmer.jpg" height="100px">
+                <div class="Text">Swimming class for adult.</div>
+            </div>
         </div>
-        <div class="Card">
-            <img alt="Simley face">
-            <div class="Text">Liability valuation under various statutory regime.</div>
-        </div>
-        <div class="Card">
-            <img alt="Simley face">
-            <div class="Text">Financial reporting under IFRS 17.</div>
-        </div>
-        <div class="Card">
-            <img alt="Simley face">
-            <div class="Text">Swimming class for adult.</div>
-        </div>
+        
     </div>
         
     <div class="Content3">
@@ -62,7 +67,7 @@
     </div>
 
     <div class="Footer">
-        <div class="Text">Copyright Ibrahim Ahmad</div>
+        <div class="Text">Copyright &copy; Ibrahim Ahmad</div>
     </div>
 
 </body>
