Complete overall landing-page with layout and style very similar to intended target. See README for things to improve on in the future.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="Content4">
             <div class="box_content">
                 <div class="Left_container2">
-                    <div class="Text">Keep in touch.</div>
-                    <div class="Text">Please click the button for a confidential chat.</div>
+                    <div class="Title3">Lorem ipsum dolor!</div>
+                    <div class="Text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
                 </div>
                 
                 <div class="Click"><button>Contact me</button></div>
